--- a/WarmingUp_with_MNIST/YOLO_MNIST_Localization.ipynb
+++ b/WarmingUp_with_MNIST/YOLO_MNIST_Localization.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/ThOpaque/Food_Recognition/blob/dev_RelativeCoords/WarmingUp_with_MNIST/YOLO_MNIST_Localization.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 1,
       "metadata": {
         "id": "wAHeh1BRufX4"
       },
@@ -64,22 +64,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "BOraK1TX7XZB",
-        "outputId": "e523805d-b873-48cd-c76e-da94cc04e095"
+        "outputId": "cd4c841e-6852-45c0-c555-cc1f8a533073"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "\n",
             "------------------------------------\n",
-            "Execute notebook on - cpu -\n",
+            "Execute notebook on - cuda -\n",
             "------------------------------------\n",
             "\n"
           ]
@@ -124,7 +124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 26,
       "metadata": {
         "id": "M7VztqFE71JZ"
       },
@@ -137,9 +137,10 @@
         "        else:\n",
         "            train = True\n",
         "        \n",
+        "        self.C = 10\n",
         "        self.S = S\n",
         "        self.dataset = torchvision.datasets.MNIST(root=root, train=train, download=download)\n",
-        "        self.cell_size = 1/float(self.S) # sizeHW / S\n",
+        "        self.cell_size = 1/float(self.S)\n",
         "    \n",
         "    def __len__(self):\n",
         "        return len(self.dataset)\n",
@@ -177,7 +178,7 @@
         "        box = [xmin, ymin, w_bbox, h_bbox]\n",
         "        return image, box\n",
         "\n",
-        "    def _encode(self, box):    \n",
+        "    def _encode(self, box, label):    \n",
         "        ### Absolute box infos\n",
         "        xmin, ymin, w_bbox, h_bbox = box\n",
         "        \n",
@@ -204,25 +205,15 @@
         "        x_norm = (rxc - x0) / self.cell_size\n",
         "        y_norm = (ryc - y0) / self.cell_size\n",
         "\n",
-        "        box_target = torch.zeros(self.S, self.S, 5)\n",
+        "        ### 4 coords + 1 conf + 10 classes\n",
+        "        one_hot_label = F.one_hot(torch.as_tensor(label, dtype=torch.int64), 10)\n",
         "\n",
-        "        box_target[j, i, :] = torch.Tensor([x_norm, y_norm, rw, rh, 1.])\n",
+        "        # box_target = torch.zeros(self.S, self.S, 4+1+self.C)\n",
+        "        box_target = torch.zeros(self.S, self.S, 4+1)\n",
+        "        box_target[j, i, :5] = torch.Tensor([x_norm, y_norm, rw, rh, 1.])\n",
+        "        # box_target[j, i, 5:] = one_hot_label\n",
         "\n",
-        "\n",
-        "        # cx_rcell = cx % self.cell_size / self.cell_size\n",
-        "        # cy_rcell = cy % self.cell_size / self.cell_size\n",
-        "\n",
-        "        # x_factor = torch.div(xc, self.cell_size, rounding_mode='trunc')\n",
-        "        # y_factor = torch.div(yc, self.cell_size, rounding_mode='trunc')\n",
-        "        # xc_rcell = (xc - (self.cell_size * x_factor)) / self.cell_size\n",
-        "        # yc_rcell = (yc - (self.cell_size * y_factor)) / self.cell_size\n",
-        "\n",
-        "        # cell_i, cell_j = x_factor, y_factor\n",
-        "\n",
-        "        # bbox_coord = torch.Tensor([xc_rcell, yc_rcell, rw, rh, cell_i, cell_j])\n",
-        "        # bbox_coord = torch.Tensor([cx_abs, cy_abs, w_bbox, h_bbox])\n",
-        "\n",
-        "        return box_target\n",
+        "        return box_target, one_hot_label\n",
         "\n",
         "    def __getitem__(self, idx):\n",
         "        if torch.is_tensor(idx):\n",
@@ -232,11 +223,11 @@
         "        label = self.dataset[idx][1]\n",
         "\n",
         "        image, box = self._pasting75(img)\n",
-        "        bbox_coord = self._encode(box)\n",
+        "        box, one_hot_label = self._encode(box, label)\n",
         "        \n",
-        "        one_hot_label = F.one_hot(torch.as_tensor(label, dtype=torch.int64), 10)\n",
         "        \n",
-        "        return image, one_hot_label.to(torch.float), bbox_coord\n"
+        "        \n",
+        "        return image, box, one_hot_label\n"
       ]
     },
     {
@@ -250,7 +241,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 27,
       "metadata": {
         "id": "yQNznLfO8jOx"
       },
@@ -299,7 +290,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "id": "wfgUx1srt90c"
       },
@@ -329,7 +320,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "id": "3VjCkTEce-CT"
       },
@@ -432,7 +423,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 28,
       "metadata": {
         "id": "T_jOg_i_p2_c"
       },
@@ -613,7 +604,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "spQEKnhDXVaS"
+      },
       "outputs": [],
       "source": [
         "for img, label, bbox_true in training_dataset:\n",
@@ -627,12 +620,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 303
-        },
-        "id": "htHyWcMhcmT6",
-        "outputId": "f2a6c534-a3be-4fce-98a1-d71651dc1b7f"
+        "id": "htHyWcMhcmT6"
       },
       "outputs": [],
       "source": [
@@ -704,7 +692,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "id": "7O8u0S3PweFR"
       },
@@ -750,25 +738,25 @@
         "\n",
         "\n",
         "\n",
-        "def intersection_over_union(bboxes1:torch.Tensor, bboxes2:torch.Tensor, *argv)->torch.Tensor:\n",
+        "def intersection_over_union(bboxes1:torch.Tensor, bboxes2:torch.Tensor)->torch.Tensor:\n",
         "    \"\"\"\n",
         "    Intersection over Union method.\n",
         "\n",
         "    Args:\n",
-        "        bboxes1 : torch.Tensor of shape (N, 5)\n",
+        "        bboxes1 : torch.Tensor of shape (N, 6, 6, 5)\n",
         "            Bounding boxes of a batch, in a given cell.\n",
-        "        bboxes2 : torch.Tensor of shape (N, 5)\n",
+        "        bboxes2 : torch.Tensor of shape (N, 6, 6, 5)\n",
         "            Bounding boxes of a batch, in a given cell.\n",
         "\n",
         "    Return:\n",
         "        iou : torch.Tensor of shape (N,)\n",
         "            Batch of floats between 0 and 1 where 1 is a perfect overlap.\n",
         "    \"\"\"\n",
-        "    assert bboxes1.shape[-1] >= 4 and bboxes2.shape[-1] >= 4, \"All bbox should be of shape (N,4) or (N,5).\"\n",
+        "    # assert bboxes1.shape[-1] >= 4 and bboxes2.shape[-1] >= 4, \"All bbox should be of shape (N,4) or (N,5).\"\n",
         "\n",
-        "    ### Convert cell reltative coordinates to absolute coordinates\n",
-        "    bboxes1 = relative2absolute(bboxes1, *argv)\n",
-        "    bboxes2 = relative2absolute(bboxes2, *argv)\n",
+        "    ### Convert cell reltative coordinates to absolute coordinates: (N,6,6,5)->(N,4)\n",
+        "    bboxes1 = relative2absolute(bboxes1)\n",
+        "    bboxes2 = relative2absolute(bboxes2)\n",
         "    xmin1, ymin1, xmax1, ymax1 = bboxes1.permute(1,0)\n",
         "    xmin2, ymin2, xmax2, ymax2 = bboxes2.permute(1,0)\n",
         "\n",
@@ -777,13 +765,13 @@
         "\n",
         "    smoothing_factor = 1e-10\n",
         "\n",
-        "    ### x, y overlaps btw pred and groundtrue\n",
+        "    ### x, y overlaps btw pred and groundtruth: \n",
         "    xmin_overlap = torch.maximum(xmin1, xmin2)\n",
         "    xmax_overlap = torch.minimum(xmax1, xmax2)\n",
         "    ymin_overlap = torch.maximum(ymin1, ymin2)\n",
         "    ymax_overlap = torch.minimum(ymax1, ymax2)\n",
         "    \n",
-        "    ### Pred and groundtrue areas\n",
+        "    ### Pred and groundtruth areas\n",
         "    box1_area = (xmax1 - xmin1) * (ymax1 - ymin1)\n",
         "    box2_area = (xmax2 - xmin2) * (ymax2 - ymin2)\n",
         "\n",
@@ -800,7 +788,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": null,
       "metadata": {
         "id": "mHUOkfWPe-CW"
       },
@@ -820,8 +808,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "61yeVsBAXVaV"
+      },
       "outputs": [],
       "source": [
         "device = torch.device('cpu')"
@@ -838,7 +828,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1976,7 +1966,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": null,
       "metadata": {
         "id": "pS0A-3zLweFR"
       },
@@ -1988,7 +1978,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 147,
+      "execution_count": null,
       "metadata": {
         "id": "BDZ9DfKw5lpX"
       },
@@ -2009,7 +1999,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 148,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2047,7 +2037,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 149,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2085,7 +2075,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 152,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2131,7 +2121,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2191,20 +2181,24 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "q929wPqEXVaY"
+      },
       "outputs": [],
       "source": []
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "45SCO9X9XVaZ"
+      },
       "outputs": [],
       "source": []
     },
     {
       "cell_type": "code",
-      "execution_count": 155,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2267,7 +2261,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 156,
+      "execution_count": null,
       "metadata": {
         "id": "DLyoeZO4QYHB"
       },
@@ -2348,7 +2342,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 157,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2677,9 +2671,9 @@
     "accelerator": "GPU",
     "colab": {
       "collapsed_sections": [],
-      "include_colab_link": true,
       "name": "YOLO_MNIST_Localization.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "gpuClass": "standard",
     "kernelspec": {
