Splitting .ipynb notebook :
- Dataset.py
- Darknet_like.py
- Yolo_loss.py
All module contain a test function.

--- a/WarmingUp_with_MNIST/YOLO_MNIST_Localization.ipynb
+++ b/WarmingUp_with_MNIST/YOLO_MNIST_Localization.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/ThOpaque/Food_Recognition/blob/dev_RelativeCoords/WarmingUp_with_MNIST/YOLO_MNIST_Localization.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 70,
       "metadata": {
         "id": "wAHeh1BRufX4"
       },
@@ -64,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 71,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -74,12 +74,12 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\n",
             "------------------------------------\n",
-            "Execute notebook on - cuda -\n",
+            "Execute notebook on - cpu -\n",
             "------------------------------------\n",
             "\n"
           ]
@@ -124,7 +124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 72,
       "metadata": {
         "id": "M7VztqFE71JZ"
       },
@@ -241,7 +241,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 73,
       "metadata": {
         "id": "yQNznLfO8jOx"
       },
@@ -1972,7 +1972,7 @@
       },
       "outputs": [],
       "source": [
-        "torch.save(model_MNIST.state_dict(), \"yolo_mnist_model_10epochs_relativeCoords.pt\")\n",
+        "# torch.save(model_MNIST.state_dict(), \"yolo_mnist_model_10epochs_relativeCoords.pt\")\n",
         "# model_MNIST.load_state_dict(torch.load(\"../yolo_mnist_model.pt\"))"
       ]
     },
@@ -2671,9 +2671,9 @@
     "accelerator": "GPU",
     "colab": {
       "collapsed_sections": [],
+      "include_colab_link": true,
       "name": "YOLO_MNIST_Localization.ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "gpuClass": "standard",
     "kernelspec": {
