Working on IoU and class accuracy.
- relative2absolute function now uses box_true to transform box_pred
coordinates. Retrieves both true and pred coordinates.
- IoU uses relative2absolute function correctly and implementation of a
test function.
- Create Metric.py module which now contains class accuracy and test
function.
- Modify train.py module to include preview mentioned updates

--- a/WarmingUp_with_MNIST/YOLO_MNIST_Localization.ipynb
+++ b/WarmingUp_with_MNIST/YOLO_MNIST_Localization.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 1,
       "metadata": {
         "id": "wAHeh1BRufX4"
       },
@@ -64,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -124,7 +124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 3,
       "metadata": {
         "id": "M7VztqFE71JZ"
       },
@@ -241,7 +241,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 4,
       "metadata": {
         "id": "yQNznLfO8jOx"
       },
@@ -290,7 +290,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "wfgUx1srt90c"
       },
@@ -320,7 +320,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "3VjCkTEce-CT"
       },
@@ -423,7 +423,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 7,
       "metadata": {
         "id": "T_jOg_i_p2_c"
       },
@@ -787,7 +787,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "mHUOkfWPe-CW"
       },
@@ -803,6 +803,26 @@
         "\n",
         "# print(optimizer)\n",
         "# summary(model_MNIST, input_size = (BATCH_SIZE,1,75,75))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "torch.optim.adam.Adam"
+            ]
+          },
+          "execution_count": 9,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "type(optimizer)"
       ]
     },
     {
@@ -1973,6 +1993,26 @@
       "source": [
         "# torch.save(model_MNIST.state_dict(), \"yolo_mnist_model_10epochs_relativeCoords.pt\")\n",
         "# model_MNIST.load_state_dict(torch.load(\"../yolo_mnist_model.pt\"))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "60000"
+            ]
+          },
+          "execution_count": 13,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "len(training_dataset.dataset)"
       ]
     },
     {
