--- a/WarmingUp_with_MNIST/sandbox.ipynb
+++ b/WarmingUp_with_MNIST/sandbox.ipynb
@@ -148,10 +148,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23 9\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'23092022_17h38'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "a = datetime.now()\n",
+    "a.strftime(\"%d%m%Y_%Hh%M\")"
+   ]
   }
  ],
  "metadata": {
