Working hard on relative2absolute function.
It now loop on SxS and produce S*S bounding boxes. The IoU function will
give the closest bounding box to the truth (TODO).
Minor modifications on other files.

--- a/WarmingUp_with_MNIST/YOLO_MNIST_Localization.ipynb
+++ b/WarmingUp_with_MNIST/YOLO_MNIST_Localization.ipynb
@@ -692,7 +692,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 85,
       "metadata": {
         "id": "7O8u0S3PweFR"
       },
@@ -715,14 +715,14 @@
         "    S = 6\n",
         "    CELL_SIZE = 1/S\n",
         "\n",
-        "    cells_with_obj = bbox_true.nonzero()[::5]\n",
+        "    cells_with_obj = bbox_relative.nonzero()[::5]\n",
         "    N, cells_i, cells_j, _ = cells_with_obj.permute(1,0)\n",
         "\n",
         "    ### Retrieving box coordinates. TBM if nb_obj > 1\n",
-        "    xrcell = bbox_true[cells_i, cells_j,0]\n",
-        "    yrcell = bbox_true[cells_i, cells_j,1]\n",
-        "    rw = bbox_true[cells_i, cells_j,2]\n",
-        "    rh = bbox_true[cells_i, cell_j,3]\n",
+        "    xrcell = bbox_relative[:, cells_i, cells_j,0]\n",
+        "    yrcell = bbox_relative[:, cells_i, cells_j,1]\n",
+        "    rw = bbox_relative[:, cells_i, cells_j,2]\n",
+        "    rh = bbox_relative[:, cells_i, cell_j,3]\n",
         "\n",
         "    xmin = xrcell * cells_j * CELL_SIZE * SIZEHW\n",
         "    ymin = xrcell * cells_i * CELL_SIZE * SIZEHW\n",
@@ -733,7 +733,6 @@
         "\n",
         "    bbox_absolute = torch.stack((xmin, ymin, xmax, ymax), dim=-1)\n",
         "    return bbox_absolute\n",
-        "\n",
         "\n",
         "\n",
         "\n",
@@ -787,7 +786,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
       "metadata": {
         "id": "mHUOkfWPe-CW"
       },
@@ -1985,34 +1991,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "pS0A-3zLweFR"
       },
-      "outputs": [],
-      "source": [
-        "# torch.save(model_MNIST.state_dict(), \"yolo_mnist_model_10epochs_relativeCoords.pt\")\n",
-        "# model_MNIST.load_state_dict(torch.load(\"../yolo_mnist_model.pt\"))"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 13,
-      "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "60000"
+              "<All keys matched successfully>"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "len(training_dataset.dataset)"
+        "# torch.save(model_MNIST.state_dict(), \"yolo_mnist_model_10epochs_relativeCoords.pt\")\n",
+        "model_MNIST.load_state_dict(torch.load(\"yolo_mnist_model_10epochs_relativeCoords.pt\"))"
       ]
     },
     {
@@ -2229,11 +2226,399 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "################## A GARDER #########################################\n",
+        "SIZEHW = 75\n",
+        "S = 6\n",
+        "CELL_SIZE = 1/S\n",
+        "for cell_i in range(S):\n",
+        "    for cell_j in range(S):\n",
+        "        xc_rimg =  box_true[:,cell_i, cell_j, 0] * CELL_SIZE + cell_j * CELL_SIZE\n",
+        "        yc_rimg =  box_true[:,cell_i, cell_j, 1] * CELL_SIZE + cell_i * CELL_SIZE\n",
+        "        if box_true[:,cell_i, cell_j, 0] == 0:\n",
+        "            xc_rimg = 0\n",
+        "            yc_rimg = 0\n",
+        "\n",
+        "        print(cell_i, cell_j, xc_rimg*SIZEHW, sep=' *** ')\n",
+        "        print(cell_i, cell_j, yc_rimg*SIZEHW, sep=' *** ')\n",
+        "        \n",
+        "        print(\"\\n\")\n",
+        "\n",
+        "    \"\"\"\n",
+        "    On retrouve bien la bbox ABSOLUE en position [cell_i, cell_j].\n",
+        "    Attention, on utilise cell_j/cell_i pour x/y respectivement.\n",
+        "    \"\"\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 81,
+      "metadata": {},
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'cells_j' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[1;32m/Users/thierryksstentini/Documents/Python_divers/GitHub/Food_Recognition/WarmingUp_with_MNIST/YOLO_MNIST_Localization.ipynb Cellule 39\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/thierryksstentini/Documents/Python_divers/GitHub/Food_Recognition/WarmingUp_with_MNIST/YOLO_MNIST_Localization.ipynb#Y125sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m cells_j\u001b[39m.\u001b[39mshape\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'cells_j' is not defined"
+          ]
+        }
+      ],
+      "source": [
+        "cells_j.shape"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 87,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "\n",
+        "def relative2absolute_re(box_true:torch.Tensor)->tuple:\n",
+        "    \"\"\"\n",
+        "    Turns bounding box relative to cell coordinates into absolute coordinates \n",
+        "    (pixels). Used to calculate IoU and to plot boxes. \n",
+        "\n",
+        "    Args:\n",
+        "        box_true : torch.Tensor of shape (N, S, S, 5)\n",
+        "            Groundtruth bounding box coordinates to convert.\n",
+        "        box_pred : torch.Tensor of shape (N, S, S, 5)\n",
+        "            Predicted bounding box coordinates to convert.\n",
+        "    Return:\n",
+        "        box_true_absolute : torch.Tensor of shape (N, 4)\n",
+        "        box_pred_absolute : torch.Tensor of shape (N, 4)\n",
+        "    \"\"\"\n",
+        "\n",
+        "    SIZEHW = 75\n",
+        "    S = 6\n",
+        "    CELL_SIZE = 1/S\n",
+        "\n",
+        "    ### Get non-zero coordinates\n",
+        "    cells_with_obj = box_true.nonzero()[::5]\n",
+        "    N, cells_i, cells_j, _ = cells_with_obj.permute(1,0)\n",
+        "\n",
+        "    ### Retrieving box coordinates. TBM if nb_obj > 1\n",
+        "    xrcell_true, yrcell_true, rw_true, rh_true = box_true[N, cells_i, cells_j, 0:4].permute(1,0)\n",
+        "    \n",
+        "    ### Compute relative-to-image center coordinates\n",
+        "    xc_rimg_true =  xrcell_true * CELL_SIZE + cells_j * CELL_SIZE\n",
+        "    yc_rimg_true =  yrcell_true * CELL_SIZE + cells_i * CELL_SIZE\n",
+        "\n",
+        "    ### Compute absolute top left coordinates\n",
+        "    xmin_true = (xc_rimg_true - rw_true/2) * SIZEHW\n",
+        "    ymin_true = (yc_rimg_true - rh_true/2) * SIZEHW\n",
+        "\n",
+        "    ### Compute absolute bottom right coordinates\n",
+        "    xmax_true = xmin_true + rw_true*SIZEHW \n",
+        "    ymax_true = ymin_true + rh_true*SIZEHW\n",
+        "\n",
+        "    ### Stacking\n",
+        "    box_true_absolute = torch.stack((xmin_true, ymin_true, xmax_true, ymax_true), dim=-1)\n",
+        "    \n",
+        "    return box_true_absolute\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 57,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "tensor([[0.4000, 0.3600, 0.3733, 0.3733, 1.0000]])"
+            ]
+          },
+          "execution_count": 57,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "box_true[:,3,2]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 88,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "tensor([[16., 28., 44., 56.]])"
+            ]
+          },
+          "execution_count": 88,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "relative2absolute_re(box_true)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 113,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "tensor([[16., 28., 44., 56.]])"
+            ]
+          },
+          "execution_count": 113,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "box_true_abs = relative2absolute_re(box_true)\n",
+        "box_true_abs"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 25,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "val_confidence_score_loss = []\n",
+        "for (img, bbox_true, labels) in validation_dataset:\n",
+        "    model_MNIST.eval()\n",
+        "    with torch.no_grad():\n",
+        "        ### prediction\n",
+        "        bbox_preds, label_preds = model_MNIST(img)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 33,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "idx = 32\n",
+        "box_true = bbox_true[idx].unsqueeze(0)\n",
+        "box_preds = bbox_preds[idx].unsqueeze(0)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "\"\"\"\n",
+        "Turns bounding box relative to cell coordinates into absolute coordinates \n",
+        "(pixels). Used to calculate IoU and to plot boxes. \n",
+        "\n",
+        "Args:\n",
+        "    box_rel : torch.Tensor of shape (N, S, S, 5)\n",
+        "        Bounding box coordinates to convert.\n",
+        "Return:\n",
+        "    box_absolute : torch.Tensor of shape (N,????? 4)\n",
+        "\"\"\"\n",
+        "# assert len(box_true.shape)==4 and len(box_pred.shape)==4, \"Bbox should be of size (N,S,S,5).\"\n",
+        "\n",
+        "SIZEHW = 75\n",
+        "S = 6\n",
+        "CELL_SIZE = 1/S\n",
+        "\n",
+        "\n",
+        "### Retrieving box coordinates\n",
+        "xrcell, yrcell, wr, hr = box_rel.permute(1,0)\n",
+        "\n",
+        "### Compute relative-to-image center coordinates\n",
+        "for cell_i in range(S):\n",
+        "    for cell_j in range(S):\n",
+        "        xc_rimg =  xrcell * CELL_SIZE + cell_j * CELL_SIZE\n",
+        "        yc_rimg =  yrcell * CELL_SIZE + cell_i * CELL_SIZE\n",
+        "\n",
+        "### Compute absolute top left coordinates\n",
+        "xmin = (xc_rimg - wr/2) * SIZEHW\n",
+        "ymin = (yc_rimg - hr/2) * SIZEHW\n",
+        "\n",
+        "### Compute absolute bottom right coordinates\n",
+        "xmax = xmin + wr*SIZEHW \n",
+        "ymax = ymin + hr*SIZEHW\n",
+        "\n",
+        "### Stacking\n",
+        "# box_true_absolute = torch.stack((xmin, ymin, xmax, ymax), dim=-1)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 44,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "torch.Size([1, 6, 6, 5])"
+            ]
+          },
+          "execution_count": 44,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "box_preds.shape"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 157,
       "metadata": {
         "id": "45SCO9X9XVaZ"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "def relative2absolute_new(box_rel)->tuple:\n",
+        "    \"\"\"\n",
+        "    ????? \n",
+        "\n",
+        "    Args:\n",
+        "        box_rel : torch.Tensor of shape (N, S, S, 5)\n",
+        "            Bounding box coordinates to convert. xy are relative-to-cell \n",
+        "            and wh are relative to image size.\n",
+        "    Return:\n",
+        "        box_absolute : torch.Tensor of shape (N,S*S) ?????\n",
+        "    \"\"\"\n",
+        "    # assert len(box_true.shape)==4 and len(box_pred.shape)==4, \"Bbox should be of size (N,S,S,5).\"\n",
+        "\n",
+        "    SIZEHW = 75\n",
+        "    S = 6\n",
+        "    CELL_SIZE = 1/S\n",
+        "    BATCH_SIZE = len(box_rel)\n",
+        "    \n",
+        "    xmin = torch.zeros((BATCH_SIZE, S*S))\n",
+        "    ymin = torch.zeros((BATCH_SIZE, S*S))\n",
+        "    xmax = torch.zeros((BATCH_SIZE, S*S))\n",
+        "    ymax = torch.zeros((BATCH_SIZE, S*S))\n",
+        "\n",
+        "    indices = []\n",
+        "\n",
+        "    it = 0\n",
+        "    for cell_i in range(S):\n",
+        "        for cell_j in range(S):\n",
+        "            ### Absolute center coordinates ji*(xy+cell_size)\n",
+        "            xc_rimg = box_rel[:,cell_i, cell_j, 0] * CELL_SIZE + cell_j * CELL_SIZE\n",
+        "            yc_rimg = box_rel[:,cell_i, cell_j, 1] * CELL_SIZE + cell_i * CELL_SIZE\n",
+        "            \n",
+        "            ### Top left absolute coordinates\n",
+        "            xmin[:, it] = (xc_rimg - box_rel[:,cell_i, cell_j, 2]/2) * SIZEHW\n",
+        "            ymin[:, it] = (yc_rimg - box_rel[:,cell_i, cell_j, 3]/2) * SIZEHW\n",
+        "            \n",
+        "            ### Bottom right absolute coordinates\n",
+        "            xmax[:, it] = xmin[:, it] + box_rel[:,cell_i, cell_j, 2]*SIZEHW\n",
+        "            ymax[:, it] = ymin[:, it] + box_rel[:,cell_i, cell_j, 3]*SIZEHW\n",
+        "            it += 1\n",
+        "            indices.append((cell_i, cell_j))\n",
+        "\n",
+        "\n",
+        "    box_absolute = torch.stack((xmin, ymin, xmax, ymax), dim=-1)\n",
+        "    return box_absolute, indices"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 158,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "box, indices = relative2absolute_new(box_true)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 142,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "box_true_abs = box_true_abs.squeeze(0)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 143,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "smoothing_factor = 1e-10\n",
+        "\n",
+        "list_iou = []\n",
+        "\n",
+        "for k in range(S*S):\n",
+        "    ### x, y overlaps btw pred and groundtruth: \n",
+        "    xmin_overlap = torch.maximum(xmin[k], box_true_abs[0])\n",
+        "    xmax_overlap = torch.minimum(xmax[k], box_true_abs[2])\n",
+        "    ymin_overlap = torch.maximum(ymin[k], box_true_abs[1])\n",
+        "    ymax_overlap = torch.minimum(ymax[k], box_true_abs[3])\n",
+        "\n",
+        "    ### Pred and groundtruth areas\n",
+        "    box1_area = (xmax[k] - xmin[k]) * (ymax[k] - ymin[k])\n",
+        "    box2_area = (box_true_abs[2] - box_true_abs[0]) * (box_true_abs[3] - box_true_abs[1])\n",
+        "\n",
+        "    ### Compute intersection area, union area and IoU\n",
+        "    overlap_area = torch.maximum((xmax_overlap - xmin_overlap), torch.Tensor([0]).to(device)) * torch.maximum((ymax_overlap - ymin_overlap), torch.Tensor([0]).to(device))\n",
+        "    union_area = (box1_area + box2_area) - overlap_area\n",
+        "    iou = (overlap_area + smoothing_factor) / (union_area + smoothing_factor)\n",
+        "    list_iou.append(iou)\n",
+        "    ### Set IoU to zero when there is no coordinates (i.e. no object)\n",
+        "    # iou = torch.masked_fill(iou, noObject, 0)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 144,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "list_iou2 = torch.Tensor([k for k in list_iou])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 147,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "tensor([1.2755e-13, 1.2755e-13, 1.2755e-13, 1.2755e-13, 1.2755e-13, 1.2755e-13,\n",
+              "        1.2755e-13, 8.8746e-03, 3.2436e-02, 1.4675e-02, 7.7138e-14, 1.2755e-13,\n",
+              "        1.2755e-13, 1.6063e-01, 4.3935e-01, 1.5380e-01, 9.6764e-03, 1.2755e-13,\n",
+              "        1.2755e-13, 4.2444e-01, 9.0059e-01, 2.8239e-01, 9.2881e-03, 1.2755e-13,\n",
+              "        1.2755e-13, 1.3999e-01, 3.3681e-01, 1.2956e-01, 3.2586e-03, 1.2755e-13,\n",
+              "        1.2755e-13, 1.2755e-13, 1.2755e-13, 1.2755e-13, 1.2755e-13, 1.2755e-13])"
+            ]
+          },
+          "execution_count": 147,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "list_iou2"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "np.array(iou) > 0"
+      ]
     },
     {
       "cell_type": "code",
@@ -2246,19 +2631,7 @@
         "id": "yRD-x2K6A70g",
         "outputId": "8b7deded-c192-462d-8523-b394e0b464b7"
       },
-      "outputs": [
-        {
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-155-945dd79cd0a0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0mimg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbbox_true\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mimg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbbox_true\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel_preds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel_MNIST\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m         \u001b[0mbbox_true_6x6\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbbox2Tensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbbox_true\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m         \u001b[0;31m### keeping only cells (i,j) with an object\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'to'"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from sklearn.metrics import confusion_matrix\n",
         "import seaborn as sn\n",
