--- a/WarmingUp_with_MNIST/YOLO_MNIST_Localization.ipynb
+++ b/WarmingUp_with_MNIST/YOLO_MNIST_Localization.ipynb
@@ -2372,7 +2372,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 295,
+      "execution_count": 300,
       "metadata": {
         "id": "45SCO9X9XVaZ"
       },
@@ -2383,7 +2383,7 @@
               "<module 'IoU' from '/Users/thierryksstentini/Documents/Python_divers/GitHub/Food_Recognition/WarmingUp_with_MNIST/IoU.py'>"
             ]
           },
-          "execution_count": 295,
+          "execution_count": 300,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2396,299 +2396,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 298,
+      "execution_count": 302,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "a, b = NMS.non_max_suppression(box_pred, label_pred, 0.6)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 312,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "tensor([[[[0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]],\n",
-              "\n",
-              "         [[0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]],\n",
-              "\n",
-              "         [[0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]],\n",
-              "\n",
-              "         [[0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.5483, 0.6381, 0.3234, 0.3242, 0.2993],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]],\n",
-              "\n",
-              "         [[0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]],\n",
-              "\n",
-              "         [[0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]]],\n",
-              "\n",
-              "\n",
-              "        [[[0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]],\n",
-              "\n",
-              "         [[0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]],\n",
-              "\n",
-              "         [[0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]],\n",
-              "\n",
-              "         [[0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]],\n",
-              "\n",
-              "         [[0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.7291, 0.6452, 0.3630, 0.3646, 0.1632],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]],\n",
-              "\n",
-              "         [[0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]]],\n",
-              "\n",
-              "\n",
-              "        [[[0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]],\n",
-              "\n",
-              "         [[0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]],\n",
-              "\n",
-              "         [[0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]],\n",
-              "\n",
-              "         [[0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.8054, 0.4622, 0.3768, 0.3550, 0.1842],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]],\n",
-              "\n",
-              "         [[0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]],\n",
-              "\n",
-              "         [[0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]]],\n",
-              "\n",
-              "\n",
-              "        ...,\n",
-              "\n",
-              "\n",
-              "        [[[0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]],\n",
-              "\n",
-              "         [[0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]],\n",
-              "\n",
-              "         [[0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]],\n",
-              "\n",
-              "         [[0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.6199, 0.6662, 0.3340, 0.3349, 0.0945],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]],\n",
-              "\n",
-              "         [[0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]],\n",
-              "\n",
-              "         [[0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]]],\n",
-              "\n",
-              "\n",
-              "        [[[0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]],\n",
-              "\n",
-              "         [[0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]],\n",
-              "\n",
-              "         [[0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]],\n",
-              "\n",
-              "         [[0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]],\n",
-              "\n",
-              "         [[0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.4826, 0.2466, 0.3540, 0.3540, 0.1068],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]],\n",
-              "\n",
-              "         [[0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]]],\n",
-              "\n",
-              "\n",
-              "        [[[0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]],\n",
-              "\n",
-              "         [[0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]],\n",
-              "\n",
-              "         [[0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]],\n",
-              "\n",
-              "         [[0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.6936, 0.4351, 0.3644, 0.3618, 0.2284],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]],\n",
-              "\n",
-              "         [[0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]],\n",
-              "\n",
-              "         [[0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]]]])"
+              "tensor([[0.5483, 0.6381, 0.3234, 0.3242, 0.2993],\n",
+              "        [0.7291, 0.6452, 0.3630, 0.3646, 0.1632],\n",
+              "        [0.8054, 0.4622, 0.3768, 0.3550, 0.1842],\n",
+              "        [0.7329, 0.3064, 0.3224, 0.3205, 0.2112],\n",
+              "        [0.7528, 0.1370, 0.3315, 0.3216, 0.1637],\n",
+              "        [0.2153, 0.0985, 0.3812, 0.3579, 0.2106],\n",
+              "        [0.7078, 0.0921, 0.3888, 0.3833, 0.1805],\n",
+              "        [0.6199, 0.6662, 0.3340, 0.3349, 0.0945],\n",
+              "        [0.4826, 0.2466, 0.3540, 0.3540, 0.1068],\n",
+              "        [0.6936, 0.4351, 0.3644, 0.3618, 0.2284]])"
             ]
           },
-          "execution_count": 298,
+          "execution_count": 312,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "NMS.non_max_suppression(box_pred, label_pred, 0.6)"
+        "a[range(10),b[:,0], b[:,1]]"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 185,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "torch.Size([1, 36, 4])"
-            ]
-          },
-          "execution_count": 185,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": []
     },
     {
       "cell_type": "code",
